# Stratus

./: Cargo.toml
src/: macros.rs  main.rs
src/components/: dashboard.rs  error.rs  login_screen.rs  main_screen.rs  mod.rs  register_screen.rs
src/css/: error_screen.css  global.css  login_screen.css  main_screen.css  register_screen.css
src/functions/: login.rs
