[package]
name = "stratus"
version = "0.1.0"
edition = "2021"
description = "An app to assist people in taking care of their mental health."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.0", features = ["alloc"] }
dioxus = { version = "0.2.4", features = ["desktop", "router"] }
libpasta = "0.1.2"

[package.metadata.bundle]
name = "Stratus"
identifier = "com.raforawesome.stratus"
icon = ["./icons/logo-*"]
